# platform_ros

./: README.md
client/: CMakeLists.txt  callback.h  client.cpp  client.h  client_node.h  client_node_2.h  main1.cpp  main2.cpp  main3.cpp  package.xml  parsing.cpp  parsing.h
controller_ros_ue/: CMakeLists.txt  package.xml  packageInfo.mat
controller_ros_ue/include/controller_ros_ue/: controller_ros_ue.h  controller_ros_ue_private.h  controller_ros_ue_types.h  rosnodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
controller_ros_ue/src/: controller_ros_ue.cpp  controller_ros_ue_data.cpp  main.cpp  rosnodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
image_decode/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  package.xml
readtopic/: CMakeLists.txt  package.xml  ueCheckNode.cpp  ueReadCam.cpp  ueReadNode.cpp
server/: CMakeLists.txt  main.cpp  package.xml  packing.cpp  packing.h  run.launch  runUE.sh  server.cpp  server.h  server_node.h
test_ue/: CMakeLists.txt  main.cpp  package.xml  ue_check_node.cpp  ue_read_cam.cpp  ue_read_node.cpp
